@@ -90,7 +90,7 @@ void jfs::Set_Used_Sectors( Partition & partition )
 			partition .Set_Unused( Utils::round( N * ( S / 512.0 ) ) ) ;
 	}
 	else
-		partition .error = error ;
+		partition .messages .push_back( error ) ;
 }
 
 bool jfs::Create( const Partition & new_partition, std::vector<OperationDetail> & operation_details )
