@@ -68,7 +68,7 @@ void reiser4::Set_Used_Sectors( Partition & partition )
 			partition .Set_Unused( Utils::round( N * ( S / 512.0 ) ) ) ;
 	}
 	else
-		partition .error = error ;
+		partition .messages .push_back( error ) ;
 }
 
 bool reiser4::Create( const Partition & new_partition, std::vector<OperationDetail> & operation_details )
