@@ -1,3 +1,12 @@
+2006-07-30 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* improved errorhandling a bit. At the initialscan we store
+	  errors/warnings now in a list per partition and show the in the
+	  partitioninfo dialog.
+	  While executing an operation we collect all libparted exceptions in
+	  a list and attach this list to the operationdetails when everything
+	  is done.
+
 2006-07-29 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* renamed some enums
